tests/snapshots/cli_configure_repository__cli_add_stdout.snap
---
source: tests/cli_configure_repository.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
Repository 'cran' added successfully with URL: https://cran.r-project.org/
