tests/snapshots/cli_configure_repository__cli_clear_stdout.snap
---
source: tests/cli_configure_repository.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
All repositories cleared successfully
