tests/snapshots/cli_configure_repository__cli_json_output_config.snap
---
source: tests/cli_configure_repository.rs
expression: result
---
[project]
name = "test"
r_version = "4.4"
repositories = [
    {alias = "posit", url = "https://packagemanager.posit.co/cran/2024-12-16/"},
    { alias = "cran", url = "https://cran.r-project.org/" },
]
dependencies = [
    "dplyr",
]
