tests/snapshots/cli_configure_repository__cli_json_output_stdout.snap
---
source: tests/cli_configure_repository.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "operation": "add",
  "alias": "cran",
  "url": "https://cran.r-project.org/",
  "success": true,
  "message": "Repository configured successfully"
}
